# DjangoCRUDExample

./: .gitignore  Dockerfile  README.md  build_docker.sh  pyproject.toml  start_api.sh
clientapi/: api.py  urls.py
django_crud_example/: asgi.py  settings.py  urls.py  wsgi.py
