[tool.poetry]
name = "djangocrudexample"
version = "0.1.0"
description = "CRUD Example API Written in Python Django-Ninja"
authors = ["resolt <pdmmichaelsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
ninja = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
