[tool.poetry]
name = "djangocrudexample"
version = "0.1.0"
description = "CRUD Example API Written in Python Django-Ninja"
authors = ["resolt <pdmmichaelsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
django-ninja = "^0.16.2"
uvicorn = "^0.17.0"
uvloop = "^0.16.0"
httptools = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
